# Sonnys-Data-API-V2

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  bo-data-open-api.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  agent-history.json
.planning/milestones/: v1.0-ROADMAP.md  v1.1-ROADMAP.md  v1.2-ROADMAP.md
api/client/: index.html
api/exceptions/: index.html
api/models/: index.html
api/resources/: index.html
docs/: index.md
docs/api/: client.md  exceptions.md  models.md  resources.md
docs/guides/: advanced-patterns.md  backoffice.md  customers.md  employees.md  error-handling.md  giftcards.md  items.md  recurring.md  sites.md  stats.md  transactions.md  washbooks.md
guides/advanced-patterns/: index.html
guides/backoffice/: index.html
guides/customers/: index.html
guides/employees/: index.html
guides/error-handling/: index.html
guides/giftcards/: index.html
guides/items/: index.html
guides/recurring/: index.html
guides/sites/: index.html
guides/stats/: index.html
guides/transactions/: index.html
guides/washbooks/: index.html
search/: search_index.json
site/: 404.html  index.html
site/api/client/: index.html
src/sonnys_data_client/: __init__.py  _client.py  _date_utils.py  _exceptions.py  _rate_limiter.py  _resources.py
tests/: test_backoffice.py  test_batch_job.py  test_client.py  test_date_utils.py  test_exceptions.py  test_rate_limiter.py  test_resources.py  test_stats_wash_classification.py  test_types.py  test_uat_04_01.py
(+137 files in other folders)
