[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonnys-data-client"
version = "0.1.0"
description = "Python client for the Sonny's Carwash Controls Data API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28,<3",
    "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/sonnys_data_client"]
